test/spec_vectors/simd_f32x4_arith/ok/module_18.wat
(module (func (export "add-sub") (param v128 v128 v128) (result v128) (f32x4.add (f32x4.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-add") (param v128 v128 v128) (result v128) (f32x4.div (f32x4.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-mul") (param v128 v128 v128) (result v128) (f32x4.div (f32x4.mul (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-sub") (param v128 v128 v128) (result v128) (f32x4.div (f32x4.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-add") (param v128 v128 v128) (result v128) (f32x4.mul (f32x4.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-div") (param v128 v128 v128) (result v128) (f32x4.mul (f32x4.div (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-sub") (param v128 v128 v128) (result v128) (f32x4.mul (f32x4.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "sub-add") (param v128 v128 v128) (result v128) (f32x4.sub (f32x4.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "add-neg") (param v128 v128) (result v128) (f32x4.add (f32x4.neg (local.get 0)) (local.get 1))) (func (export "add-sqrt") (param v128 v128) (result v128) (f32x4.add (f32x4.sqrt (local.get 0)) (local.get 1))) (func (export "div-neg") (param v128 v128) (result v128) (f32x4.div (f32x4.neg (local.get 0)) (local.get 1))) (func (export "div-sqrt") (param v128 v128) (result v128) (f32x4.div (f32x4.sqrt (local.get 0)) (local.get 1))) (func (export "mul-neg") (param v128 v128) (result v128) (f32x4.mul (f32x4.neg (local.get 0)) (local.get 1))) (func (export "mul-sqrt") (param v128 v128) (result v128) (f32x4.mul (f32x4.sqrt (local.get 0)) (local.get 1))) (func (export "sub-neg") (param v128 v128) (result v128) (f32x4.sub (f32x4.neg (local.get 0)) (local.get 1))) (func (export "sub-sqrt") (param v128 v128) (result v128) (f32x4.sub (f32x4.sqrt (local.get 0)) (local.get 1))))